airflow/logs/dag_id=initialize_etl_environment/run_id=scheduled__2024-07-02T00:00:00+00:00/task_id=create_facebook_table/attempt=1.log
[2024-07-06T17:53:01.499+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: initialize_etl_environment.create_facebook_table scheduled__2024-07-02T00:00:00+00:00 [queued]>
[2024-07-06T17:53:01.502+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: initialize_etl_environment.create_facebook_table scheduled__2024-07-02T00:00:00+00:00 [queued]>
[2024-07-06T17:53:01.502+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2024-07-06T17:53:01.506+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_facebook_table> on 2024-07-02 00:00:00+00:00
[2024-07-06T17:53:01.508+0000] {standard_task_runner.py:57} INFO - Started process 56 to run task
[2024-07-06T17:53:01.509+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'initialize_etl_environment', 'create_facebook_table', 'scheduled__2024-07-02T00:00:00+00:00', '--job-id', '789', '--raw', '--subdir', 'DAGS_FOLDER/etl_env_init.py', '--cfg-path', '/tmp/tmp59bxwbke']
[2024-07-06T17:53:01.510+0000] {standard_task_runner.py:85} INFO - Job 789: Subtask create_facebook_table
[2024-07-06T17:53:01.530+0000] {task_command.py:410} INFO - Running <TaskInstance: initialize_etl_environment.create_facebook_table scheduled__2024-07-02T00:00:00+00:00 [running]> on host f6bf59d3e65b
[2024-07-06T17:53:01.563+0000] {taskinstance.py:1545} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='airflow@example.com' AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='initialize_etl_environment' AIRFLOW_CTX_TASK_ID='create_facebook_table' AIRFLOW_CTX_EXECUTION_DATE='2024-07-02T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-07-02T00:00:00+00:00'
[2024-07-06T17:53:01.564+0000] {sql.py:262} INFO - Executing: 
    CREATE TABLE IF NOT EXISTS raw.facebook (
        id PRIMARY KEY,
        platform VARCHAR(50), -- 'Instagram' or 'Facebook'
        date DATE NOT NULL,
        campaign VARCHAR(100),
        ad_unit VARCHAR(100),
        impressions INT,
        percent_watched DECIMAL(5, 2),
        clicks INT,
        cost DECIMAL(10, 2),
        conversions INT,
        likes INT,
        shares INT,
        comments INT,
        created_at TIMESTAMP 
    );
        
    
[2024-07-06T17:53:01.567+0000] {base.py:73} INFO - Using connection ID 'company_dw' for task execution.
[2024-07-06T17:53:01.588+0000] {base.py:73} INFO - Using connection ID 'company_dw' for task execution.
[2024-07-06T17:53:01.590+0000] {sql.py:375} INFO - Running statement: 
    CREATE TABLE IF NOT EXISTS raw.facebook (
        id PRIMARY KEY,
        platform VARCHAR(50), -- 'Instagram' or 'Facebook'
        date DATE NOT NULL,
        campaign VARCHAR(100),
        ad_unit VARCHAR(100),
        impressions INT,
        percent_watched DECIMAL(5, 2),
        clicks INT,
        cost DECIMAL(10, 2),
        conversions INT,
        likes INT,
        shares INT,
        comments INT,
        created_at TIMESTAMP 
    );
        
    , parameters: None
[2024-07-06T17:53:01.590+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/providers/common/sql/operators/sql.py", line 268, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "PRIMARY"
LINE 3:         id PRIMARY KEY,
                   ^

[2024-07-06T17:53:01.595+0000] {taskinstance.py:1345} INFO - Marking task as UP_FOR_RETRY. dag_id=initialize_etl_environment, task_id=create_facebook_table, execution_date=20240702T000000, start_date=20240706T175301, end_date=20240706T175301
[2024-07-06T17:53:01.599+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 789 for task create_facebook_table (syntax error at or near "PRIMARY"
LINE 3:         id PRIMARY KEY,
                   ^
; 56)
[2024-07-06T17:53:01.609+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2024-07-06T17:53:01.618+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
